--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,8 +5,11 @@
 
     <style name="Theme.Calculator" parent="Base.Theme.Calculator" />
 
-    <style name="CalculatorButton" parent="Widget.AppCompat.Button">
+    <style name="CalculatorButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">76dp</item>
+        <item name="android:layout_height">76dp</item>
         <item name="android:textSize">22sp</item>
+        <item name="fontFamily">@font/doppio_one_regular</item>
     </style>
 
     <style name="CalculatorButton.DigitButton">
@@ -16,7 +19,8 @@
 
 
     <style name="CalculatorButton.OperationButton">
-        <item name="android:background">@drawable/circle_button_operation</item>
+        <item name="android:background">@drawable/circle_button_digit</item>
+        <item name="backgroundTint">@color/orange</item>
         <item name="android:textColor">@color/gray</item>
     </style>
 </resources>
